# mltheory-project

./: .gitignore  README.md  main.py  pyproject.toml  train_modal.py
models/: __init__.py  evaluation.py  lightgbm_model.py  logistic_regression.py  neural_network.py  preprocessing.py  random_forest.py  svm.py
outputs/: detailed_metrics.json  model_comparison.csv
paper/: paper.tex  texpdf.bat
poster/: poster.tex
